// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPrimaryBackgroundClass has dark version 1`] = `"background--dark-primary"`;

exports[`getPrimaryBackgroundClass has light version 1`] = `"background--light-primary"`;

exports[`getSecondayBackgroundClass has dark version 1`] = `"background--dark-secondary"`;

exports[`getSecondayBackgroundClass has light version 1`] = `"background--light-secondary"`;

exports[`getTertiaryBackgroundColor has dark version 1`] = `
Object {
  "backgroundColor": "rgba(255,255,255,.2)",
}
`;

exports[`getTertiaryBackgroundColor has light version 1`] = `
Object {
  "backgroundColor": "rgba(0,0,0,.2)",
}
`;

exports[`getTertiaryTextClass has dark version 1`] = `"text-dark-tertiary"`;

exports[`getTertiaryTextClass has light version 1`] = `"text-light-tertiary"`;

exports[`getTertiaryTextColor has dark version 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`getTertiaryTextColor has light version 1`] = `
Object {
  "color": "rgba(0,0,0,.5)",
}
`;

exports[`renders light version 1`] = `
<div
  className="grid one-whole flush soft-top"
>
  <div
    className="hard grid__item one-tenth floating__item "
    style={
      Object {
        "color": "rgba(0,0,0,.5)",
      }
    }
  >
    <small>
      <small>
        20
      </small>
    </small>
  </div>
  <div
    className="grid__item eight-tenths push-half-ends floating__item soft-half-sides"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="play-bar rounded play-bar_uziqvr"
      style={
        Object {
          "backgroundColor": "rgba(0,0,0,.2)",
        }
      }
    />
    <div
      className="play-bar--active_18t9bb6 floating--right"
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <div
        className="play-bar_uziqvr rounded background--dark-primary"
      />
      <button
        className="scrub-dot_l7j38z plain floating__item round background--dark-primary"
      />
    </div>
    <div
      className="cover"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": "-20px",
        }
      }
    />
  </div>
  <div
    className="hard grid__item one-tenth floating__item "
    style={
      Object {
        "color": "rgba(0,0,0,.5)",
      }
    }
  >
    <small>
      <small>
        12:23
      </small>
    </small>
  </div>
</div>
`;

exports[`renders with props 1`] = `
<div
  className="grid one-whole flush soft-top"
>
  <div
    className="hard grid__item one-tenth floating__item "
    style={
      Object {
        "color": "rgba(255,255,255,.5)",
      }
    }
  >
    <small>
      <small>
        20
      </small>
    </small>
  </div>
  <div
    className="grid__item eight-tenths push-half-ends floating__item soft-half-sides"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="play-bar rounded play-bar_uziqvr"
      style={
        Object {
          "backgroundColor": "rgba(255,255,255,.2)",
        }
      }
    />
    <div
      className="play-bar--active_18t9bb6 floating--right"
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <div
        className="play-bar_uziqvr rounded background--light-primary"
      />
      <button
        className="scrub-dot_l7j38z plain floating__item round background--light-primary"
      />
    </div>
    <div
      className="cover"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": "-20px",
        }
      }
    />
  </div>
  <div
    className="hard grid__item one-tenth floating__item "
    style={
      Object {
        "color": "rgba(255,255,255,.5)",
      }
    }
  >
    <small>
      <small>
        12:23
      </small>
    </small>
  </div>
</div>
`;
